respond data instead of complete message